sf-dynamic-approvals/main/default/objects/DynamicApproverDefinition__mdt/DynamicApproverDefinition__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Approver Definition</label>
    <pluralLabel>Dynamic Approver Definitions</pluralLabel>
</CustomObject>