sf-dynamic-approvals/main/default/objects/DynamicApproverDefinition__mdt/fields/AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>AssignmentType__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL Query</fullName>
                <default>true</default>
                <label>SOQL Query</label>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
            <value>
                <fullName>User Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>