sf-dynamic-approvals/main/default/objects/DynamicApproverDefinition__mdt/fields/DynamicApprovalStepDefinition__c.field-meta.xml
<CustomField>
    <fullName>DynamicApprovalStepDefinition__c</fullName>
    <label>Dynamic Approval Step Definition</label>
    <referenceTo>DynamicApprovalStepDefinition__mdt</referenceTo>
    <relationshipLabel>Dynamic Approver Definitions</relationshipLabel>
    <relationshipName>DynamicApproverDefinitions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>