sf-dynamic-approvals/main/default/objects/DynamicApproverDefinition__mdt/fields/PublicGroupName__c.field-meta.xml
<CustomField>
    <fullName>PublicGroupName__c</fullName>
    <label>Public Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>