sf-dynamic-approvals/main/default/objects/DynamicApproverDefinition__mdt/fields/RelatedUserLookupFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelatedUserLookupFieldName__c</fullName>
    <label>Related User Lookup Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>