sf-dynamic-approvals/main/default/objects/DynamicApproverDefinition__mdt/fields/SOQLQuery__c.field-meta.xml
<CustomField>
    <fullName>SOQLQuery__c</fullName>
    <label>SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>